# cedar-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build_release.yml  pr_test.yml
examples/: allowed_authorization_query.json  data.json  denied_authorization_query.json  policies.json  schema.json
src/: authn.rs  common.rs  config.rs  lib.rs  load_data.rs  logger.rs  main.rs
src/errors/: catchers.rs  mod.rs  response.rs  schemas.rs
src/routes/: authorization.rs  data.rs  mod.rs  policies.rs  schema.rs
src/schemas/: authorization.rs  data.rs  mod.rs  policies.rs  schema.rs
src/services/: mod.rs
src/services/data/: load_from_file.rs  memory.rs  mod.rs
src/services/policies/: errors.rs  load_from_file.rs  memory.rs  mod.rs
src/services/schema/: load_from_file.rs  memory.rs  mod.rs  schema.rs
src/services/schemas/: mod.rs  schemas.rs
tests/services/: data_tests.rs  mod.rs  policies_tests.rs  schema_tests.rs  utils.rs
