[package]
name = "cedar-agent"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/permitio/cedar-agent"
description = "Cedar-Agent is an HTTP server designed to efficiently manage a policy store and a data store. It provides a seamless integration with Cedar, a language for defining permissions as policies."
repository = "https://github.com/permitio/cedar-agent"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.7.0"
async-trait = "0.1.68"
cedar-policy = "2.4.2"
cedar-policy-core = "2.4.2"
clap = { version = "4.2.5", features = ["derive"] }
envy = "0.4.2"
log = "0.4.17"
log4rs = "1.2.0"
rocket = "0.5.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
serde = "1.0.160"
thiserror = "1.0.40"
tokio = "1.28.0"
